test/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: default
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: cloud-provider-kind
spec:
  ingressClassName: cloud-provider-kind
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
